--- a/README
+++ b/README
@@ -15,7 +15,7 @@ Following parameter are avaliable:
   -c, --create-directories   	download files with it' directories and subdirectories
   -h, --help                 	shows this help
   -g, --get       <path>     	downloads remote file
-  -d, --directory            	download remote directory recursively instead of sindle file
+  -r, --directory            	download remote directory recursively instead of single file
                              	use this with -g (--get)
   -o, --output    <path>     	specify dst filename when downloading
 
